@@ -7,6 +7,11 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2024 JUN 13a
+  * in model/transport/_Gupta-Yos/transport.c
+    - added the option TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_ELECTRONMOBILITIESPARENTMACHERET
+    
+
 2024 JUN 12b
   * in model/chem/_NH3_Plasma_32s/Makefile
     - added rodriguez2024*
